<resources>
    <string name="app_name">不再邊緣運動</string>

    <string name="Login">登入</string>
    <string name="Home">首頁</string>
    <string name="open">會員資料</string>
    <string name="close">註冊</string>
    <string name="email_register">電郵註冊</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_title">搜尋標題</string>
    <string name="search_hint">請輸入關鍵字</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_haba">habaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="q">\n</string>
    <string name="texta">\n缺乏時對身體的影響：\n皮膚乾燥、呼吸器官容易受感染、發育不良、夜盲症、乾眼病
        \n\n主要功用：\n保護眼睛內的細胞，增強視力、保護皮膚、鼻腔和喉腔的內膜、促進牙齒、骨骼正常生加強免疫能力
    	\n\n吸收來源：\n牛奶、魚肝油、起士、蛋黃、冰淇淋、魚、肝臟、菠菜、番茄、甘薯、青江菜等...黃綠色蔬菜</string>
    <string name="textb1">\n缺乏時對身體的影響：\n會導致神經炎、腳氣病等神經組織損傷、心臟組織損傷、肌肉組織損傷、食慾不振、消化不良便秘
        \n\n主要功用：\n保持食慾、消化力和胃張力，保持神經系統的正常功能，維持正常睪丸組織的健全，降低乳酸於肌肉中的累積量，可防止肌肉無力及疲勞
        \n\n吸收來源：\n蛋黃、魚、內臟、花生、豬肉、牛奶、黃豆、麥芽、全麥穀類、椰菜、葡萄乾等</string>
    <string name="textb2">\n缺乏時對身體的影響：\n角膜炎、口角炎、脂溢性皮膚炎、舌炎、女子外陰炎、眼睛畏光易疲勞、視力模糊、眼睛酸痛、角膜充血
    \n\n主要功用：\n減輕眼睛疲勞、防止及治療白內障、維持視力
    \n\n吸收來源：\n乳酪、雞蛋、牛奶、雞、鴨、魚、杏仁、豆類、菠菜、麥芽</string>
    <string name="textb6">\n缺乏時對身體的影響：\n嘔心、情緒低落、皮膚炎、貧血、衰弱、運動失調、腹痛、痙攣、腎臟及膀胱結石
    \n\n主要功用：\n減輕月經來臨前的不適症狀\n有助於過敏症、關節炎及哮喘的治療\n緩和憂慮感\n當作精神安定劑
    \n\n吸收來源：\n蛋黃、肉類、魚類、全麥榖類、啤酒酵母胡蘿蔔、豆類、花生、菠菜、香蕉、豌豆</string>
    <string name="textb12">	\n缺乏時對身體的影響：\n貧血、消化不良、骨髓變性、舌炎、神經係症狀
    \n\n主要功用：\n造血、促進人體正常生長與發育
    \n\n吸收來源：\n牛肉、魚類、海鮮、乳酪、蛋、牛奶、豆腐、肝</string>
    <string name="textc">\n缺乏時對身體的影響：\n關節腫痛、發熱疹、牙質疏鬆、傷口復原緩慢、不思飲食、容易骨折、壞血病
    \n\n主要功用：\n促進血液循環、消除疲勞、改善白血球機能，幫助傷口瘉合、增強免疫力、預防壞血病、骨折、製造腎上腺類固醇激素、預防感冒
    \n\n吸收來源：\n柚子、草莓、柑橘、青椒、綠葉蔬菜、番茄、玉米、馬鈴薯、檸檬等蔬果</string>
    <string name="textd">\n缺乏時對身體的影響：\n朐僂症骨質疏鬆症、蛀牙、骨折、軟骨症如骨骼彎曲、壞牙等
        \n\n主要功用：\n有助吸收鈣和磷、幫助骨骼生成，牙齒發育，防止牙齒脫落、幫助維他命A的吸收、有效於結膜炎的治療、預防骨質疏鬆症，令骨骼強健
        \n\n吸收來源：\n陽光、牛奶、雞蛋、牛油、三文魚、鮪魚</string>
    <string name="texte">\n缺乏時對身體的影響：\n溶血性貧血、腸胃不適、陽萎、水腫、皮膚病害、肌肉衰弱、月經失調、膀胱纖維症、血小板增多、掉髮、頭髮乾燥
    \n\n主要功用：\n減少傷口疤痕、降低血壓、防止細胞氧化、降低罹患心臟疾病、冠狀動脈疾病的發生率、延緩老化，減少老人斑的沈積
    \n\n吸收來源：\n植物油、全麥穀類、胚芽、蛋黃、深色綠葉蔬菜、堅果類食物</string>
    <string name="textk">\n缺乏時對身體的影響：\n膽汁缺乏、膽結石、梗塞性黃疸病、小腸吸收障礙、腹瀉
    \n\n主要功用：\n凝結血液、身體受傷時可防止出血過多
    \n\n吸收來源：\n椰菜、大豆、肝、燕麥、小麥、蕃茄</string>
    <string name="textA">維他命A為促進生長與健康的必需因子。它有使眼睛適應光線之變化，因此獲得眼睛的維他命之稱。</string>
    <string name="textB1">維他命B1屬水溶性維他命，亦稱神經炎素，又稱為抗神經炎因子，它是白色結晶粉末，帶有些微酵母的味道。</string>
    <string name="textB2">一般所謂核黃素，它是一種橘黃色結晶性粉末，可溶於水但不溶於乙醚等有機溶劑，是形成紅血球、製造抗體的必需營養素。</string>
    <string name="textB6">參與多種蛋白質和氨基酸的代謝功能，維持神經系統及大腦的正常功能，並促進紅血球形成。胃中鹽酸的製造及脂肪與蛋白質的吸收均需要維他命B6。</string>
    <string name="textB12">是所有維生素分子中最為複雜的，是一種抗惡性貧血因子。並幫助細胞形成，有助抗貧血，並能促進人體正常生長與發育。蛋白質合成、碳水化合物及脂肪的代謝均需要維他命B12。</string>
    <string name="textC">維他命C為水溶性維生素，在人體可加強維他命E之功能。極易在植物組織中被合成，但人類身體無法合成，必須額外藉助食物中取得。維生素C極易在小腸、皮下組織、腹腔內被吸收，吸收後分佈至全身。</string>
    <string name="textD">最容易產生過量或安全顧慮的維他命，因為它負責從腸道吸收鈣質，長期且大量的使用會導致軟組織的鈣化。維他命D是溶於脂肪不溶於水的維他命，適當分量的維他命D有助鈣和磷的吸收、促進牙齒和骨骼的正常生長。</string>
    <string name="textE">維他命E是一抗氧化劑，能夠保護多重不飽和脂肪酸、脂肪油溶性物質的氧化。維他命E也是一種預防癌症及心臟血管毛病的抗氧化劑，對於改善血液循環、修護組織、月經來前不適症狀均有幫助。</string>
    <string name="textK">維他命K與骨骼形成具有密切關係，故此吸取充足維他命K有效預防骨質疏鬆症。維他命K並能將葡萄糖轉化為肝糖並貯存在肝臟，大部分食物都只含有少量維他命K。</string>
    <string name="bmi1">\n肥胖固然是慢性病之元兇，可是許多調查卻顯示，體重過輕對健康的危害亦不容小覷。體重不足容易有疲倦、抑鬱、肌肉耗損，四肢無力等現象，嚴重時更會降低身體的免疫系統，增加罹病風險。別忘了充足的營養，除了讓你有體力外，也能讓腦部得到足夠的能量。
\n\n1.或許你可以與營養師一起訂定「可以達到的增重計畫」：\n每個人飲食型態不同，熱量需求也不同，建議可至醫院找營養師協助。
\n\n2.利用相關門診諮詢：\n若是腸胃消化不良所引起的，可至消化內科門診進行諮詢；若是由於心理因素，如：因怕胖而害怕進食或者心理壓力過大而實不下嚥，則可以尋求心理師的協助來改善情況。
\n\n3.搭配運動，長肌肉不長肥肉：\n規律的有氧運動（如健走、慢跑、 游泳、騎腳踏車等），可促使肌肉細胞的養分吸收，讓身體緊實，曲線完美。</string>
    <string name="bmi2">\nOH！OH！該減重囉！當BMI超過24「過重」，或超過27「肥胖」，都不利健康。BMI在25-30的人，有一半的可能罹患脂肪肝；假如BMI超過30，那肝包油的機率高達85％。你可以從每日步行一段距離開始，有助於你減輕體重並維持下去。
讓消耗的熱量多於所攝取的，以下推薦五個好方法：\n\n1.有氧運動快步走\n最有效的有氧運動必須符合「333」的原則，就是每週運動3次、每次30分鐘、運動強度必須達到心跳每分鐘130下。
\n\n2.肌力運動不可少：\n每天花10分鐘做做簡單的伏地挺身與仰臥起坐，或者拿著礦泉水看電視，就能「練肌肉」。
\n\n3.營養均衡最重要：\n一定要避免快速、不當的節食方法，三餐定食定量，但要控制熱量，就能讓基礎代謝率維持在高檔。
\n\n4.多喝水：\n多喝水能讓加速身體的化學反應，代謝體內多餘的廢物。成人一天需要2000-3000cc的水，但心臟衰竭、肝硬化、腎衰竭及腎病症候群者不能喝太多的水。
\n\n5.運動後泡熱水澡：\n以自己能接受的水溫為原則，但要感到溫熱且出汗，才能達到效果。此外，浴缸裡的水位不可超過心臟，以10-15分鐘為宜，泡澡後要補充足夠的水分。</string>
    <string name="bmi3">\n\n繼續保持下去，不要鬆懈了</string>
    <string name="Calories">如果已經很滿意現在自己的身體狀況,那只需要攝取原來每日消耗熱量就可以了。\n\n----------------------------------------------------</string>
    <string name="AddCalories">身體會將多餘的熱量拿去合成肌肉使用,但同時也有可能被合成脂肪,因此必須在透過較高的蛋白質攝取量,來讓肌肉獲得的比例大於脂肪增加。\n\n----------------------------------------------------</string>
    <string name="DownCalories">身體會將不夠的熱量透過燃燒脂肪來取得，但同時也不建議少太多,人體機制也有可能會將肌肉拿來分解取得能量,所以減脂的過程中還是要透過訓練以及足夠的蛋白飲食來維持肌肉。\n※如果已經攝取在這範圍內的卡路里,體重仍然沒有變化,則應該循序漸進增加自己的活動量(ex.有氧活動),而非更加的去減少自己應該攝取的卡路里。\n\n----------------------------------------------------</string>
    <string name="metabolism">\n\n是維持生命所需消耗的最低能量,這些能量主要用於保持各器官的機能。基礎代謝率會隨著年齡增加或體重減輕而降低,而隨著肌肉增加而增加。疾病、進食、環境溫度變化承受壓力水平變化都會改變人體的能量消耗,因此基礎代謝率低的人要更注意控制自己的飲食。</string>
    <string name="metabolism1"></string>
    <string name="addart">切記發文的內容請與選擇的運動類型相關 若非相關話題經發現會刪除該文章。\n\n發文記得先選擇「運動類型」!\n發文記得先選擇「運動類型」!\n發文記得先選擇「運動類型」!\n</string>
    <string name="action_settings">Settings</string>
    <string-array name="spinner_of_running_place">
        <item>泊油路</item>
        <item>草皮</item>
        <item>紅磚</item>
    </string-array>
    <string name="empty_of_edit_text">輸入格不能空</string>
    <string name="value_maximum_and_minimum_of_running_distance">距離不能小於100米和大於5000米</string>
    <string name="login1">帳號：</string>
    <string name="login2">密碼：</string>
    <string name="desc">步數</string>
    <string name="title1">今天</string>
    <string name="unit1">步數</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="connect_to_shealth">連接到Samsung Health</string>

    <string name="notice">注意</string>
    <string name="msg_perm_acquired">應獲取所有權限</string>
    <string name="msg_conn_not_available">無法與Samsung Health連接</string>
    <string name="msg_req_install">請安裝Samsung Health</string>
    <string name="msg_req_upgrade">Please upgrade Samsung Health</string>
    <string name="msg_req_enable">請升級Samsung Health</string>
    <string name="msg_req_agree">請同意三星健康政策</string>
    <string name="msg_req_available">請提供三星健康</string>
    <string name="need_a_new_account">註冊新的賬號</string>
    <string name="display_name">顯示名字</string>
    <string name="email">電郵</string>
    <string name="password">密碼</string>
    <string name="create_account">創建賬號</string>
    <string name="log_out">登出</string>
    <string name="chat_room">運動聊天室</string>
    <string name="task_friend">邀請朋友</string>
    <string name="gear_fit">連接運動手環</string>
    <string name="post">發帖</string>


    <string name="default_status">做運動真好</string>
    <string name="title_activity_photo_dlog">運動論壇</string>
    <string name="title_activity_photo_blog">運動信息分享</string>
    <string name="action_search_text">Search</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="post_menu">發帖</string>
    <string name="common_food_calories">常見的食物熱量</string>
    <string name="food_name">食物名稱</string>
    <string name="select_ead_time_slot">選擇用餐時段</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="confirm">確認</string>
    <string name="common_food_calories_layout_name_unit">◎食物分量與單位</string>
    <string name="common_food_calories_layout_data">※食物卡路里數據</string>
    <string name="title_activity_simple_main">SimpleMainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="crunches">仰卧起坐</string>
    <string name="running">跑步</string>
    <string name="squats">深蹲</string>
    <string name="walking">步行</string>
    <string name="yoga">瑜伽</string>
</resources>
