<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Login"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Login" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/reg"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/close" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemAbout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/open" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/email_register"
            android:icon="@drawable/email_register"
            android:title="@string/email_register" />
    </group>
</menu>