<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="5dp"
    android:id="@+id/common_food_calories_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/post_border"
        android:orientation="horizontal"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/common_food_calories_layout_image"
            android:src="@drawable/default_avatar"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/object_color"
            android:layout_gravity="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/common_food_calories_layout_name"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/food_name"
            android:layout_weight="1"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/common_food_calories_layout_name_unit"
                android:text="@string/common_food_calories_layout_name_unit"
                android:textColor="@color/text_color"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/common_food_calories_layout_data"
                android:textColor="@color/text_color"
                android:text="@string/common_food_calories_layout_data"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>